test/stg/error/dataCon1.stg
-- duplicate data constructors
data Bool = True | False;
data Bool1 = True | False;
